Fixed spacing on index page

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -47,7 +47,7 @@ h1 {
     font-size: 50pt;
     text-align: center;
     margin: 0;
-    margin-top: 8px;
+    margin-top: 4px;
     margin-bottom: 32px;
     letter-spacing: 1px;
 }
